--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                 </h2>
                 <ul class="success-list">
                     <li class="success-item">
+                        <div class="success-icon">
+                            <svg width="64" height="64">
+                            </svg>
+                        </div>
                         <h3 class="success-title">
                             Strategy
                         </h3>
@@ -73,6 +77,10 @@
                         </p>
                     </li>
                     <li class="success-item">
+                        <div class="success-icon">
+                            <svg width="64" height="64">
+                            </svg>
+                        </div>
                         <h3 class="success-title">
                             Punctuality
                         </h3>
@@ -83,6 +91,10 @@
                         </p>
                     </li>
                     <li class="success-item">
+                        <div class="success-icon">
+                            <svg width="64" height="64">
+                            </svg>
+                        </div>
                         <h3 class="success-title">
                             Diligence
                         </h3>
@@ -92,6 +104,10 @@
                         </p>
                     </li>
                     <li class="success-item">
+                        <div class="success-icon">
+                            <svg width="64" height="64">
+                            </svg>
+                        </div>
                         <h3 class="success-title">
                             Technologies
                         </h3>
