--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                             <p class="team-member-text">
                                 Product Designer
                             </p>
+                            <ul class="team-social">
+                                <li class="team-social-item"></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-member">
