--- a/index.html
+++ b/index.html
@@ -234,11 +234,19 @@
         </section>
     </main>
     <footer class="page-footer">
-        <div class="container">
-            <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
+        <div class="container footer-container">
+            <div class="footer-logo-container">
+                <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+                <p class="footer-text">
+                    Increase the flow of customers and sales for your business with digital marketing & growth
+                    solutions.
+                </p>
+            </div>
+            <div class="footer-social">
+                <p class="footer-social-text">
+                    Social media
+                </p>
+            </div>
         </div>
     </footer>
 
