--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 <ul class="success-list">
                     <li class="success-item">
                         <div class="success-icon">
-                            <svg width="64" height="64">
+                            <svg class="class-name" width="64" height="64">
+                                <use href="./images/icons.svg#icon-Group"></use>
                             </svg>
                         </div>
                         <h3 class="success-title">
