--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <li class="success-item">
                         <div class="success-icon">
                             <svg class="class-name" width="64" height="64">
-                                <use href="./images/icons.svg#icon-Group"></use>
+                                <use href="./images/icons.svg#icon-group"></use>
                             </svg>
                         </div>
                         <h3 class="success-title">
@@ -79,7 +79,8 @@
                     </li>
                     <li class="success-item">
                         <div class="success-icon">
-                            <svg width="64" height="64">
+                            <svg class="class-name" width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="success-title">
@@ -93,7 +94,8 @@
                     </li>
                     <li class="success-item">
                         <div class="success-icon">
-                            <svg width="64" height="64">
+                            <svg class="class-name" width="64" height="64">
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="success-title">
@@ -106,7 +108,8 @@
                     </li>
                     <li class="success-item">
                         <div class="success-icon">
-                            <svg width="64" height="64">
+                            <svg class="class-name" width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="success-title">
@@ -135,7 +138,13 @@
                                 Product Designer
                             </p>
                             <ul class="team-social">
-                                <li class="team-social-item"></li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.instagram.com/mark.guerrero">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
