--- a/index.html
+++ b/index.html
@@ -145,6 +145,27 @@
                                         </svg>
                                     </a>
                                 </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.facebook.com/mark.guerrero">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.twitter.com/mark.guerrero">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.linkedin.com/in/mark-guerrero">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
