--- a/index.html
+++ b/index.html
@@ -176,6 +176,35 @@
                             <p class="team-member-text">
                                 Frontend Developer
                             </p>
+                            <ul class="team-social">
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.instagram.com/tom.ford">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.facebook.com/tom.ford">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.twitter.com/tom.ford">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.linkedin.com/in/tom-ford">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
                         </div>
                     </li>
                     <li class="team-member">
@@ -185,6 +214,35 @@
                             <p class="team-member-text">
                                 Marketing
                             </p>
+                            <ul class="team-social">
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.instagram.com/camila.garcia">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.facebook.com/camila.garcia">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.twitter.com/camila.garcia">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.linkedin.com/in/camila-garcia">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
                         </div>
                     </li>
                     <li class="team-member">
@@ -194,6 +252,34 @@
                             <p class="team-member-text">
                                 UI Designer
                             </p>
+                            <ul class="team-social">
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.instagram.com/daniel.wilson">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.facebook.com/daniel.wilson">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.twitter.com/daniel.wilson">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-social-item">
+                                    <a class="team-social-link" href="https://www.linkedin.com/in/daniel-wilson">
+                                        <svg class="team-social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
                         </div>
                     </li>
                 </ul>
