--- a/index.html
+++ b/index.html
@@ -297,7 +297,13 @@
                 </h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-member">
-                        <img src="./images/img-5.jpg" alt="Banking App avatar" width="360" height="300">
+                        <div class="portfolio-member-item">
+                            <img src="./images/img-5.jpg" alt="Banking App avatar" width="360" height="300">
+                            <p class="portfolio-member-item-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-member-info">
                             <h3 class="portfolio-member-titie">Banking App</h3>
                             <p class="portfolio-member-text">
