--- a/index.html
+++ b/index.html
@@ -299,12 +299,12 @@
                     <li class="portfolio-member">
                         <div class="portfolio-member-item">
                             <img src="./images/img-5.jpg" alt="Banking App avatar" width="360" height="300">
-                            <p class="portfolio-member-item-text">
+                            <p class="overlay-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                                 App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
                         </div>
-                        <div class="portfolio-member-info">
+                        <div class=" portfolio-member-info">
                             <h3 class="portfolio-member-titie">Banking App</h3>
                             <p class="portfolio-member-text">
                                 App
