--- a/index.html
+++ b/index.html
@@ -312,7 +312,13 @@
                         </div>
                     </li>
                     <li class="portfolio-member">
-                        <img src="./images/img-6.jpg" alt="Cashless Payment avatar" width="360" height="300">
+                        <div class="portfolio-member-item">
+                            <img src="./images/img-6.jpg" alt="Cashless Payment avatar" width="360" height="300">
+                            <p class="overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-member-info">
                             <h3 class="portfolio-member-titie">Cashless Payment</h3>
                             <p class="portfolio-member-text">
@@ -321,7 +327,13 @@
                         </div>
                     </li>
                     <li class="portfolio-member">
-                        <img src="./images/img-7.jpg" alt="Meditation App avatar" width="360" height="300">
+                        <div class="portfolio-member-item">
+                            <img src="./images/img-7.jpg" alt="Meditation App avatar" width="360" height="300">
+                            <p class="overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-member-info">
                             <h3 class="portfolio-member-titie">Meditation App</h3>
                             <p class="portfolio-member-text">
@@ -330,7 +342,13 @@
                         </div>
                     </li>
                     <li class="portfolio-member">
-                        <img src="./images/img-8.jpg" alt="Taxi Service avatar" width="360" height="300">
+                        <div class="portfolio-member-item">
+                            <img src="./images/img-8.jpg" alt="Taxi Service avatar" width="360" height="300">
+                            <p class="overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-member-info">
                             <h3 class="portfolio-member-titie">Taxi Service</h3>
                             <p class="portfolio-member-text">
@@ -339,7 +357,13 @@
                         </div>
                     </li>
                     <li class="portfolio-member">
-                        <img src="./images/img-9.jpg" alt="Screen Illustrations avatar" width="360" height="300">
+                        <div class="portfolio-member-item">
+                            <img src="./images/img-9.jpg" alt="Screen Illustrations avatar" width="360" height="300">
+                            <p class="overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-member-info">
                             <h3 class="portfolio-member-titie">Screen Illustrations</h3>
                             <p class="portfolio-member-text">
@@ -348,7 +372,13 @@
                         </div>
                     </li>
                     <li class="portfolio-member">
-                        <img src="./images/img-10.jpg" alt="Online Courses avatar" width="360" height="300">
+                        <div class="portfolio-member-item">
+                            <img src="./images/img-10.jpg" alt="Online Courses avatar" width="360" height="300">
+                            <p class="overlay-text">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-member-info">
                             <h3 class="portfolio-member-titie">Online Courses</h3>
                             <p class="portfolio-member-text">
@@ -373,6 +403,36 @@
                 <p class="footer-social-text">
                     Social media
                 </p>
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="https://www.instagram.com/webstudio">
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="https://www.facebook.com/webstudio">
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="https://www.twitter.com/webstudio">
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a class="footer-social-link" href="https://www.linkedin.com/in/webstudio">
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
